--- a/templates/result.html
+++ b/templates/result.html
@@ -1,28 +1,165 @@
-<!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    {% load static %}
-    <meta charset="UTF-8">
-    <title>结果</title>
-    <script src="{% static "js/jquery-3.5.1.min.js" %}" type="text/javascript"></script>
+	{% load static %}
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<title>一款jquery实现的整屏切换特效</title>
+	<script src="{% static 'js/modernizn.js' %}"></script>
+
+    <script src="{% static 'js/jquery-3.5.1.min.js' %}" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/dstyle.css' %}">
+
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="{% static 'js/result.js' %}" type="text/javascript"></script>
 </head>
 <body>
-    <p>图片结果</p>
-    {% for face_display_dict in face_display_dicts %}
-        <div>年龄：{{ face_display_dict.age }}</div>
-        <div>颜值：{{ face_display_dict.beauty }}</div>
-        <div>表情：{{ face_display_dict.expression }}</div>
-        <div>性别：{{ face_display_dict.gender }}</div>
-        <div>是否戴眼镜：{{ face_display_dict.glasses }}</div>
-    {% endfor %}
-    <hr>
-    <p>音频结果</p>
-    {% for audio in audio_files %}
-      {% for audio_item in audio.values %}
-            <div>
-                <audio src="{% static 'files/' %}{{ audio_item }}" controls></audio>
-            </div>
+<div class="wrapper active-page1">
+<div class="page page1">
+<!--		年龄，性别-->
+        <img class="bg" src="{% static 'images/bg2.jpg'%} ">
+        <div class="cubeBox" style="position: absolute;top: 35%;right: 10%;">
+            <!--小立方体-->
+            <ul class="cube">
+                <li><img src="{% static 'images/bg22.gif' %}"></li>
+                <li><img src="{% static 'images/bg22.gif' %}"></li>
+                <li><img src="{% static 'images/bg2.gif' %}"></li>
+                <li><img src="{% static 'images/bg2.gif' %}"></li>
+            </ul>
+        </div>
+        <div class="box_container" style="position: absolute;left: 5%;top: 15%;background-color: #e5f7ff;">
+            {% for face_display_dict in face_display_dicts %}
+                <div class="display_title">年龄：{{ face_display_dict.age }} 性别：{{ face_display_dict.gender }}</div>
+                <span class="display_content">这里是彩虹屁，这里是彩虹屁，这里是彩虹屁这里是彩虹屁，这里是彩虹屁，这里是彩虹屁</span>
+            {% endfor %}
+        </div>
+        <div class="display_container" style="position: absolute;left: 5%;top: 15%;">
+            {% for face_display_dict in face_display_dicts %}
+                <div class="display_title">年龄：{{ face_display_dict.age }} 性别：{{ face_display_dict.gender }}</div>
+                <span class="display_content">这里是彩虹屁，这里是彩虹屁，这里是彩虹屁这里是彩虹屁，这里是彩虹屁，这里是彩虹屁</span>
+            {% endfor %}
+        </div>
+        {% for audio_item in audio_files.values %}
+<!--                for key{{ forloop.counter }},value{{ forloop.counter }} in audio-->
+            <audio id="music{{ forloop.counter }}" style="display: none" src="{% static 'files/' %}{{ audio_item }}"></audio>
         {% endfor %}
-    {% endfor %}
+        <button id="musBtn1" style="position:absolute;top:5%;right:15" type="button" class="btn btn-default" onClick="play1()" aria-label="Left Align">
+            <span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span>
+        </button>
+
+</div>
+
+<div class="page page2">
+<!--		颜值-->
+    <img class="bg" src="{% static 'images/bg4.jpg'%} " style="opacity: 0.8;filter: blur(3)">
+        <div class="cubeBox" style="position: absolute;top: 40%;right: 70%;">
+            <!--小立方体-->
+            <ul class="cube">
+                <li><img src="{% static 'images/bg44.gif' %}"></li>
+                <li><img src="{% static 'images/bg44.gif' %}"></li>
+                <li><img src="{% static 'images/bg444.gif' %}"></li>
+                <li><img src="{% static 'images/bg444.gif' %}"></li>
+            </ul>
+        </div>
+        <div class="box_container" style="position: absolute;left: 50%;top: 20%;background-color: #ffe6cc;">
+            {% for face_display_dict in face_display_dicts %}
+                <div class="display_title">颜值：{{ face_display_dict.beauty }}</div>
+                <span class="display_content">这里是彩虹屁2号，这里是彩虹屁2号，这里是彩虹屁2号这里是彩虹屁2号，这里是彩虹屁2号，这里是彩虹屁2号</span>
+            {% endfor %}
+        </div>
+        <div class="display_container" style="position: absolute;left: 50%;top: 20%;">
+            {% for face_display_dict in face_display_dicts %}
+                <div class="display_title">颜值：{{ face_display_dict.beauty }}</div>
+                <span class="display_content">这里是彩虹屁2号，这里是彩虹屁2号，这里是彩虹屁2号这里是彩虹屁2号，这里是彩虹屁2号，这里是彩虹屁2号</span>
+            {% endfor %}
+        </div>
+<!--        {% for audio in audio_files %}-->
+<!--          {% for audio_item in audio.values %}-->
+<!--                <audio id="music" src="{% static 'files/' %}{{ audio_item }}" controls style="display: hidden"></audio>-->
+<!--            {% endfor %}-->
+<!--        {% endfor %}-->
+        <button id="musBtn2" style="position:absolute;top:5%;right:15" type="button" class="btn btn-default" onClick="play2()" aria-label="Left Align">
+            <span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span>
+        </button>
+
+</div>
+
+<div class="page page3">
+
+<!--		表情-->
+    <img class="bg" src="{% static 'images/bg5.jpg'%} " style="opacity: 0.8;filter: blur(3)">
+        <div class="cubeBox" style="position: absolute;top: 35%;right: 10%;">
+            <!--小立方体-->
+            <ul class="cube">
+                <li><img src="{% static 'images/bg3.gif' %}"></li>
+                <li><img src="{% static 'images/bg3.gif' %}"></li>
+                <li><img src="{% static 'images/bg33.gif' %}"></li>
+                <li><img src="{% static 'images/bg33.gif' %}"></li>
+            </ul>
+        </div>
+        <div class="box_container" style="position: absolute;left: 5%;top: 15%;background-color: #e5f7ff;">
+            {% for face_display_dict in face_display_dicts %}
+                <div class="display_title">表情：{{ face_display_dict.expression }}</div>
+                <span class="display_content">这里是彩虹屁3号，这里是彩虹屁2号，这里是彩虹屁2号这里是彩虹屁2号，这里是彩虹屁2号，这里是彩虹屁2号</span>
+            {% endfor %}
+        </div>
+        <div class="display_container" style="position: absolute;left: 5%;top: 15%;">
+            {% for face_display_dict in face_display_dicts %}
+                <div class="display_title">表情：{{ face_display_dict.expression }}</div>
+                <span class="display_content">这里是彩虹屁3号，这里是彩虹屁2号，这里是彩虹屁2号这里是彩虹屁2号，这里是彩虹屁2号，这里是彩虹屁2号</span>
+            {% endfor %}
+        </div>
+        <button id="musBtn3" style="position:absolute;top:5%;right:15" type="button" class="btn btn-default" onClick="play3()" aria-label="Left Align">
+            <span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span>
+        </button>
+
+</div>
+<div class="page page4">
+
+<!--		眼镜-->
+    <img class="bg" src="{% static 'images/bg1.jpg'%} ">
+        <div class="cubeBox" style="position: absolute;top: 55%;right: 60%;">
+            <!--小立方体-->
+            <ul class="cube">
+                <li><img src="{% static 'images/bg11.gif' %}"></li>
+                <li><img src="{% static 'images/bg11.gif' %}"></li>
+                <li><img src="{% static 'images/bg1.gif' %}"></li>
+                <li><img src="{% static 'images/bg1.gif' %}"></li>
+            </ul>
+        </div>
+        <div class="box_container" style="position: absolute;left: 60%;top: 20%;background-color: #e5f7ff;">
+            {% for face_display_dict in face_display_dicts %}
+                <div class="display_title">眼镜：{{ face_display_dict.glasses }}</div>
+                <span class="display_content">这里是彩虹屁2号，这里是彩虹屁2号，这里是彩虹屁2号这里是彩虹屁2号，这里是彩虹屁2号，这里是彩虹屁2号</span>
+            {% endfor %}
+        </div>
+        <div class="display_container" style="position: absolute;left: 60%;top: 20%;">
+            {% for face_display_dict in face_display_dicts %}
+                <div class="display_title">眼镜：{{ face_display_dict.glasses }}</div>
+                <span class="display_content">这里是彩虹屁2号，这里是彩虹屁2号，这里是彩虹屁2号这里是彩虹屁2号，这里是彩虹屁2号，这里是彩虹屁2号</span>
+            {% endfor %}
+        </div>
+        <button id="musBtn4" style="position:absolute;top:5%;right:15" type="button" class="btn btn-default" onClick="play4()" aria-label="Left Align">
+            <span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span>
+        </button>
+
+</div>
+</div>
+<div class="nav-panel">
+<div class="scroll-btn up">
+</div>
+<div class="scroll-btn down">
+</div>
+<nav>
+	<ul>
+		<li data-target="1" class="nav-btn nav-page1 active"></li>
+		<li data-target="2" class="nav-btn nav-page2"></li>
+		<li data-target="3" class="nav-btn nav-page3"></li>
+		<li data-target="4" class="nav-btn nav-page4"></li>
+	</ul>
+</nav>
+</div>
+
+
 </body>
 </html>
