--- a/templates/camera.html
+++ b/templates/camera.html
@@ -77,7 +77,7 @@
                         <div style="width: fit-content; height: 100%; margin: auto; position: relative;">
                             
                             <!-- 欢迎页面美女 -->
-                            <img id="demo" style="display: block; height: 25rem; z-index: 1;" src="{% static "images/demo.jpg" %}" alt="">
+                            <img id="demo" style="display: block; height: 25rem; z-index: 1;" src="{% static "images/demo3.jpg" %}" alt="">
 
                             <!-- 预览照片结果 -->
                             <img id="photoPreview" style="display: none; z-index: 1;" src="" >
