--- a/templates/result.html
+++ b/templates/result.html
@@ -2,7 +2,7 @@
 <head>
 	{% load static %}
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>一款jquery实现的整屏切换特效</title>
+	<title>面部数据报告</title>
 	<script src="{% static 'js/modernizn.js' %}"></script>
 
     <script src="{% static 'js/jquery-3.5.1.min.js' %}" type="text/javascript"></script>
