--- a/static/css/dstyle.css
+++ b/static/css/dstyle.css
@@ -51,10 +51,6 @@ li {
     left: 0;
     transition: all 1s ease;
 }
-.cube li img{
-    width: 100%;
-    height: 80%;
-}
 .cube li:nth-child(1){
     transform: rotateX(0deg) translateZ(80px);
 }
@@ -72,16 +68,16 @@ li {
     100%{transform: rotateX(-13deg) rotateY(360deg);}
 }
 .cubeBox:hover .cube li:nth-child(1){
-    transform: rotateX(0deg) translateZ(160px);
+    transform: scale3d(1.7, 1.7, 1.7) rotateX(0deg) translateZ(130px);
 }
 .cubeBox:hover .cube li:nth-child(2){
-    transform: rotateY(180deg) translateZ(160px);
+    transform: scale3d(1.7, 1.7, 1.7) rotateY(180deg) translateZ(130px);
 }
 .cubeBox:hover .cube li:nth-child(3){
-    transform: rotateY(-90deg) translateZ(160px);
+    transform: scale3d(1.7, 1.7, 1.7) rotateY(-90deg) translateZ(130px);
 }
 .cubeBox:hover .cube li:nth-child(4){
-    transform: rotateY(90deg) translateZ(160px);
+    transform: scale3d(1.7, 1.7, 1.7) rotateY(90deg) translateZ(130px);
 }
 
 .display_container {
