--- a/templates/result.html
+++ b/templates/result.html
@@ -1,15 +1,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	{% load static %}
+    {% load static %}
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>面部数据报告</title>
 	<script src="{% static 'js/modernizn.js' %}"></script>
 
     <script src="{% static 'js/jquery-3.5.1.min.js' %}" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'css/dstyle.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/result_img.css' %}">
 
     <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+    <script src="{% static "js/jquery-3.5.1.min.js" %}" type="text/javascript"></script>
     <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="{% static 'js/result.js' %}" type="text/javascript"></script>
 </head>
@@ -18,25 +19,29 @@
 <div class="page page1">
 <!--		年龄，性别-->
         <img class="bg" src="{% static 'images/bg2.jpg'%} ">
-        <div class="cubeBox" style="position: absolute;top: 35%;right: 10%;">
+        <div id="cube1" title="把你变成动漫人物！" class="cubeBox" style="position: absolute;top: 35%;right: 10%;">
             <!--小立方体-->
-            <ul class="cube">
-                <li><img src="{% static 'images/bg22.gif' %}"></li>
-                <li><img src="{% static 'images/bg22.gif' %}"></li>
-                <li><img src="{% static 'images/bg2.gif' %}"></li>
-                <li><img src="{% static 'images/bg2.gif' %}"></li>
+            <ul class="cube" style="cursor: pointer;">
+                <li><img class="resimg" src="{% static 'files/' %}{{ anim_file }}"></li>
+                <li><img class="resimg" src="{% static 'files/' %}{{ anim_file }}"></li>
+                <li><img class="resimg" src="{% static 'files/' %}{{ anim_file }}"></li>
+                <li><img class="resimg" src="{% static 'files/' %}{{ anim_file }}"></li>
             </ul>
         </div>
         <div class="box_container" style="position: absolute;left: 5%;top: 15%;background-color: #e5f7ff;">
-            {% for face_display_dict in face_display_dicts %}
-                <div class="display_title">年龄：{{ face_display_dict.age }} 性别：{{ face_display_dict.gender }}</div>
-                <span class="display_content">这里是彩虹屁，这里是彩虹屁，这里是彩虹屁这里是彩虹屁，这里是彩虹屁，这里是彩虹屁</span>
+            {% for age_gender in face_display_dict.age_gender %}
+                <div class="display_title">年龄：{{ age_gender.0 }} 性别：{{ age_gender.1 }}</div>  
+            {% endfor %}
+            {% for praise_age in praise_dicts.age %}
+                <span class="display_content">{{praise_age}}</span>
             {% endfor %}
         </div>
         <div class="display_container" style="position: absolute;left: 5%;top: 15%;">
-            {% for face_display_dict in face_display_dicts %}
-                <div class="display_title">年龄：{{ face_display_dict.age }} 性别：{{ face_display_dict.gender }}</div>
-                <span class="display_content">这里是彩虹屁，这里是彩虹屁，这里是彩虹屁这里是彩虹屁，这里是彩虹屁，这里是彩虹屁</span>
+            {% for age_gender in face_display_dict.age_gender %}
+                <div class="display_title">年龄：{{ age_gender.0 }} 性别：{{ age_gender.1 }}</div>
+            {% endfor %}
+            {% for praise_age in praise_dicts.age %}
+                <span class="display_content">{{praise_age}}</span>
             {% endfor %}
         </div>
         {% for audio_item in audio_files.values %}
@@ -52,25 +57,29 @@
 <div class="page page2">
 <!--		颜值-->
     <img class="bg" src="{% static 'images/bg4.jpg'%} " style="opacity: 0.8;filter: blur(3)">
-        <div class="cubeBox" style="position: absolute;top: 40%;right: 70%;">
+        <div id="cube2" class="cubeBox" style="position: absolute;top: 40%;right: 70%; cursor: pointer;">
             <!--小立方体-->
-            <ul class="cube">
-                <li><img src="{% static 'images/bg44.gif' %}"></li>
-                <li><img src="{% static 'images/bg44.gif' %}"></li>
-                <li><img src="{% static 'images/bg444.gif' %}"></li>
-                <li><img src="{% static 'images/bg444.gif' %}"></li>
+            <ul class="cube" title="把你变成赫本！" style="cursor: pointer;">
+                <li><img class="resimg" src="{% static 'files/' %}{{ result_imgfiles.0 }}"></li>
+                <li><img class="resimg" src="{% static 'files/' %}{{ result_imgfiles.0 }}"></li>
+                <li><img class="resimg" src="{% static 'files/' %}{{ result_imgfiles.0 }}"></li>
+                <li><img class="resimg" src="{% static 'files/' %}{{ result_imgfiles.0 }}"></li>
             </ul>
         </div>
         <div class="box_container" style="position: absolute;left: 50%;top: 20%;background-color: #ffe6cc;">
-            {% for face_display_dict in face_display_dicts %}
-                <div class="display_title">颜值：{{ face_display_dict.beauty }}</div>
-                <span class="display_content">这里是彩虹屁2号，这里是彩虹屁2号，这里是彩虹屁2号这里是彩虹屁2号，这里是彩虹屁2号，这里是彩虹屁2号</span>
+            {% for beauty in face_display_dict.beauty %}
+                <div class="display_title">颜值：{{ beauty }}</div>
+            {% endfor %}
+            {% for praise_beauty in praise_dicts.beauty %}
+                <span class="display_content">{{praise_beauty}}</span>
             {% endfor %}
         </div>
         <div class="display_container" style="position: absolute;left: 50%;top: 20%;">
-            {% for face_display_dict in face_display_dicts %}
-                <div class="display_title">颜值：{{ face_display_dict.beauty }}</div>
-                <span class="display_content">这里是彩虹屁2号，这里是彩虹屁2号，这里是彩虹屁2号这里是彩虹屁2号，这里是彩虹屁2号，这里是彩虹屁2号</span>
+            {% for beauty in face_display_dict.beauty %}
+            <div class="display_title">颜值：{{ beauty }}</div>
+            {% endfor %}
+            {% for praise_beauty in praise_dicts.beauty %}
+                <span class="display_content">{{praise_beauty}}</span>
             {% endfor %}
         </div>
 <!--        {% for audio in audio_files %}-->
@@ -88,25 +97,29 @@
 
 <!--		表情-->
     <img class="bg" src="{% static 'images/bg5.jpg'%} " style="opacity: 0.8;filter: blur(3)">
-        <div class="cubeBox" style="position: absolute;top: 35%;right: 10%;">
+        <div id="cube3" class="cubeBox" style="position: absolute;top: 35%;right: 10%;">
             <!--小立方体-->
-            <ul class="cube">
-                <li><img src="{% static 'images/bg3.gif' %}"></li>
-                <li><img src="{% static 'images/bg3.gif' %}"></li>
-                <li><img src="{% static 'images/bg33.gif' %}"></li>
-                <li><img src="{% static 'images/bg33.gif' %}"></li>
+            <ul class="cube"  title="把你变成哪吒！"  style="cursor: pointer;">
+                <li><img class="resimg" src="{% static 'files/' %}{{ result_imgfiles.1 }}"></li>
+                <li><img class="resimg" src="{% static 'files/' %}{{ result_imgfiles.1 }}"></li>
+                <li><img class="resimg" src="{% static 'files/' %}{{ result_imgfiles.1 }}"></li>
+                <li><img class="resimg" src="{% static 'files/' %}{{ result_imgfiles.1 }}"></li>
             </ul>
         </div>
         <div class="box_container" style="position: absolute;left: 5%;top: 15%;background-color: #e5f7ff;">
-            {% for face_display_dict in face_display_dicts %}
-                <div class="display_title">表情：{{ face_display_dict.expression }}</div>
-                <span class="display_content">这里是彩虹屁3号，这里是彩虹屁2号，这里是彩虹屁2号这里是彩虹屁2号，这里是彩虹屁2号，这里是彩虹屁2号</span>
+            {% for expression in face_display_dict.expression %}
+                <div class="display_title">表情：{{ expression }}</div>
+            {% endfor %}
+            {% for praise_expression in praise_dicts.expression %}
+                <span class="display_content">{{praise_expression}}</span>
             {% endfor %}
         </div>
         <div class="display_container" style="position: absolute;left: 5%;top: 15%;">
-            {% for face_display_dict in face_display_dicts %}
-                <div class="display_title">表情：{{ face_display_dict.expression }}</div>
-                <span class="display_content">这里是彩虹屁3号，这里是彩虹屁2号，这里是彩虹屁2号这里是彩虹屁2号，这里是彩虹屁2号，这里是彩虹屁2号</span>
+            {% for expression in face_display_dict.expression %}
+                <div class="display_title">表情：{{ expression }}</div>
+            {% endfor %}
+            {% for praise_expression in praise_dicts.expression %}
+                <span class="display_content">{{praise_expression}}</span>
             {% endfor %}
         </div>
         <button id="musBtn3" style="position:absolute;top:5%;right:15" type="button" class="btn btn-default" onClick="play3()" aria-label="Left Align">
@@ -118,25 +131,29 @@
 
 <!--		眼镜-->
     <img class="bg" src="{% static 'images/bg1.jpg'%} ">
-        <div class="cubeBox" style="position: absolute;top: 55%;right: 60%;">
-            <!--小立方体-->
-            <ul class="cube">
-                <li><img src="{% static 'images/bg11.gif' %}"></li>
-                <li><img src="{% static 'images/bg11.gif' %}"></li>
-                <li><img src="{% static 'images/bg1.gif' %}"></li>
-                <li><img src="{% static 'images/bg1.gif' %}"></li>
+    <!--小立方体-->
+        <div id="cube4" class="cubeBox" style="position: absolute;top: 40%;right: 70%; ">
+            <ul class="cube"  title="把你变成敖丙！" style="cursor: pointer;">
+                <li><img class="resimg" src="{% static 'files/' %}{{ result_imgfiles.2 }}"></li>
+                <li><img class="resimg" src="{% static 'files/' %}{{ result_imgfiles.2 }}"></li>
+                <li><img class="resimg" src="{% static 'files/' %}{{ result_imgfiles.2 }}"></li>
+                <li><img class="resimg" src="{% static 'files/' %}{{ result_imgfiles.2 }}"></li>
             </ul>
         </div>
         <div class="box_container" style="position: absolute;left: 60%;top: 20%;background-color: #e5f7ff;">
-            {% for face_display_dict in face_display_dicts %}
-                <div class="display_title">眼镜：{{ face_display_dict.glasses }}</div>
-                <span class="display_content">这里是彩虹屁2号，这里是彩虹屁2号，这里是彩虹屁2号这里是彩虹屁2号，这里是彩虹屁2号，这里是彩虹屁2号</span>
+            {% for glasses in face_display_dict.glasses %}
+                <div class="display_title">眼镜：{{ glasses }}</div>
+            {% endfor %}
+            {% for praise_glasses in praise_dicts.glasses %}
+                <span class="display_content">{{praise_glasses}}</span>
             {% endfor %}
         </div>
         <div class="display_container" style="position: absolute;left: 60%;top: 20%;">
-            {% for face_display_dict in face_display_dicts %}
-                <div class="display_title">眼镜：{{ face_display_dict.glasses }}</div>
-                <span class="display_content">这里是彩虹屁2号，这里是彩虹屁2号，这里是彩虹屁2号这里是彩虹屁2号，这里是彩虹屁2号，这里是彩虹屁2号</span>
+            {% for glasses in face_display_dict.glasses %}
+                <div class="display_title">眼镜：{{ glasses }}</div>
+            {% endfor %}
+            {% for praise_glasses in praise_dicts.glasses %}
+                <span class="display_content">{{praise_glasses}}</span>
             {% endfor %}
         </div>
         <button id="musBtn4" style="position:absolute;top:5%;right:15" type="button" class="btn btn-default" onClick="play4()" aria-label="Left Align">
