--- a/templates/index.html
+++ b/templates/index.html
@@ -74,13 +74,12 @@
                 <div class="slider__nav-dot" data-id="4"></div>
             </div>
         </div>
-        <!--下一页按钮-->
         <button id="routeBtn" onclick="window.location.href='/camera'"></button>
     </div>
 
 
 
-    <!--背景的点连线-->
+    <!--点连线-->
     <script type="text/javascript" color="233,233,233" opacity='0.7' zIndex="-2" count="110"
         src="{% static "js/canvas-nest.js" %}"></script>
     <script src="{% static "js/index.js" %}"></script>
