--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
                         <h3>年龄</h3>
                     </div>
                     <div class="slider__text-item-info">
-                        <p>从中华五千年的文化积累中重新认识岁月的意义</p>
+                        <p>岁月授予勋章</p>
                     </div>
                 </div>
                 <div class="slider__text-item" data-id="3">
